--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
-    "react": "^18.2.0"
+    "react": "^18.2.0",
+    "vue-skycons": "^4.3.0"
   }
 }
